fix(header): increase z-index if flyout is open

--- a/src/components/global/header/header.scss
+++ b/src/components/global/header/header.scss
@@ -18,6 +18,10 @@
   padding: 4px 8px;
   z-index: var(--kd-z-header);
 
+  &.child-open {
+    z-index: calc(var(--kd-z-header) + 1);
+  }
+
   @media screen and (min-width: 42rem) {
     padding: 4px 24px;
   }
