--- a/src/components/global/localNav/localNav.scss
+++ b/src/components/global/localNav/localNav.scss
@@ -8,7 +8,7 @@
   @media (max-width: 42rem) {
     position: sticky;
     top: 0;
-    z-index: 10000;
+    z-index: var(--kd-z-header);
     // margin: 0 -16px;
   }
 }
